--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -71,3 +71,18 @@
     </ol>
   </div>
 </section>
+<style>
+	.hero {
+			background-color: transparent;
+			/* Set the background to transparent */
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			overflow: hidden;
+			position: relative;
+	}
+  .pirata-font {
+    font-family: "Pirata One", sans-serif;
+  }
+</style> 
