--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,3 +29,18 @@
         </div>
     </footer>
 </body>
+<style>
+	.hero {
+			background-color: transparent;
+			/* Set the background to transparent */
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			overflow: hidden;
+			position: relative;
+	}
+  .pirata-font {
+    font-family: "Pirata One", sans-serif;
+  }
+</style> 
