--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -33,11 +33,11 @@ const { Base } = Astro.props;
         </ul>
         <!-- {{# <p class="mb-8 font-light lg:text-xl text-black">Deliver great service experiences fast - without the complexity of traditional ITSM solutions.</p> #}} -->
       </div>
-      <img class="mb-4 w-full lg:mb-0 lg:flex rounded-lg" src="/public/Screenshot 2023-10-18 at 11.52.54 AM.png" alt="office feature image">
+      <img class="mb-4 w-full lg:mb-0 lg:flex rounded-lg" src="/massText.png" alt="office feature image">
     </div>
     <!-- Row -->
     <div class="gap-8 items-center lg:grid lg:grid-cols-2 xl:gap-16">
-      <img class="mb-4 w-full lg:mb-0 lg:flex rounded-lg" src="/public/Screenshot 2023-10-18 at 3.18.26 PM.png" alt="office feature image 2">
+      <img class="mb-4 w-full lg:mb-0 lg:flex rounded-lg" src="/intranet.png" alt="office feature image 2">
       <div class="text-black">
         <h2 class="mb-4 text-3xl md:text-4xl tracking-tight font-extrabold gradient-text">Intranet</h2>
         <p class="mb-8 font-light text-lg lg:text-xl text-black">Constructed using a modern tech stack that includes Astro, Tailwind coupled with SCSS, React, and Next.js. The intranet offers seamless navigation and fast page loads through server-side rendering (SSR) powered by Node.js. It's fortified with Active Directory for organized data management, MS Azure 2-Factor authentication for enhanced security, and complies with the latest security parameters to ensure a safe user experience. Overall handling 500+ employees successfully.</p>
