--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -43,6 +43,19 @@
           <p class="text-base md:text-xl font-normal text-black">AFKZP2FZ3FJG</p>
         </div>
       </li>
+      <li class="mb-10 ml-4">
+        <div
+        class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+      </div>
+        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-gray-800">Issued Dec 2022</time>
+        <h3 class="text-xl md:text-2xl font-semibold text-black">Meta Front-End Development</h3>
+        <p class="mb-4 text-base md:text-xl font-normal text-black">GitHub · Linux · UI/UX · Capstone · Coding Interview · JavaScript · Version Control · HTML/CSS · React.js · Tailwind</p>
+
+        <div class="mt-2">
+          <h4 class="text-base md:text-xl font-semibold text-black">Credential ID:</h4>
+          <p class="text-base md:text-xl font-normal text-black">8ZFTATJ9FGYP</p>
+        </div>
+      </li>
       <!-- Your certifications end here -->
 
       <!-- Add more education or certification entries if needed -->
