--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -3,18 +3,6 @@ interface Props {
   title: string;
 }
 
-const { title } = Astro.props;
-const videoProps = {
-  autoplay: true,
-  loop: true,
-  muted: true,
-  id: "some-id",
-};
-
-const sourceProps = {
-  src: "public/vecteezy_military-combat-aircraft_7071482_127.mp4",
-  type: "video/mp4",
-};
 ---
 
 <!doctype html>
@@ -26,10 +14,10 @@ const sourceProps = {
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/Screenshot 2023-10-19 at 3.03.55 PM.png"
+      href="/favicon.png"
     />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>Joshua P. Conley</title>
     <meta charset="utf-8" />
     <link rel="shortcut icon" type="image/x-icon" href="" />
     <meta name="viewport" content="width=device-width" />
@@ -62,10 +50,7 @@ const sourceProps = {
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
-    <video {...videoProps}>
-      <source {...sourceProps} />
-      <!-- Include additional source elements for different video formats if needed -->
-    </video>
+
     <slot />
   </body>
 </html>
