npm updates and styling issues

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,16 +2,7 @@
 
 ---
 
-<body class="bg-gray-100">
-  <!-- Video Container -->
-  
-  <!-- <video  {...videoProps}>
-     <source {...sourceProps}>
-  </video> -->
-  <!-- {{# <div id="stars" class="absolute top-0 left-0 w-full h-full"></div>
-  <div id="stars2" class="absolute top-0 left-0 w-full h-full"></div>
-  <div id="stars3" class="absolute top-0 left-0 w-full h-full"></div> #}} -->
-
+<div class="bg-gradient-radial from-blue-400 via-purple-500 to-pink-500 min-h-screen">
   <div class="hero">
     <div class="max-w-lg">
       <h1 class="gradient-text text-5xl md:text-8xl font-extrabold pb-4 text-center pirata-font">Hi, I'm Joshua.</h1>
@@ -39,11 +30,9 @@
       </div>
     </div>
   </div>
-</body>
-</html>
+</div>
 <style>
 	.hero {
-			background-color: transparent;
 			/* Set the background to transparent */
 			display: flex;
 			justify-content: center;
