--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -22,10 +22,8 @@ interface Props {
     <link rel="shortcut icon" type="image/x-icon" href="" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" title="Joshua Conley Portfolio" />
-    <!-- {{ vite src="resources/js/site.js|resources/css/site.css" }}
-    {{# <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> #}} -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"
-    ></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
 
     <link
@@ -48,6 +46,8 @@ interface Props {
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<link rel="stylesheet" href="/global.css" />
+
   </head>
   <body>
 
@@ -77,7 +77,7 @@ interface Props {
   }
 
   .hero {
-    background-color: transparent;
+    background-color: red;
     /* Set the background to transparent */
     display: flex;
     justify-content: center;
@@ -136,15 +136,5 @@ interface Props {
     min-height: 100%;
     z-index: -1; /* Place it behind other content */
   }
-  video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    object-fit: cover;
-  }
+
 </style>
