--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,12 @@
 <div class="bg-gradient-radial from-blue-400 via-purple-500 to-pink-500 min-h-screen">
   <div class="hero">
     <div class="max-w-lg">
-      <h1 class="gradient-text text-5xl md:text-8xl font-extrabold pb-4 text-center pirata-font">Hi, I'm Joshua.</h1>
+      <h1 class="gradient-text text-5xl md:text-8xl font-extrabold pb-4 text-center pirata-font">
+        Hi, I'm Joshua<svg class="w-16 h-16 text-black inline-block align-middle ml-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1v18M1 3.652v9c5.6-5.223 8.4 2.49 14-.08v-9c-5.6 2.57-8.4-5.143-14 .08Z"/>
+        </svg>
+    </h1>
+    
       <h2 class="gradient-text text-xl md:text-4xl text-center pirata-font">Kalamazoo, MI</h2>
       <p class="py-6 px-4 text-center gradient-text text-[16px] md:text-2xl font-light md:text-center pirata-font">
         I'm a full-stack developer by day, <br class="md:hidden"> code wizard by night,
