page styling updates

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,7 @@
         </div>
 
         <!-- Copyright Text -->
-        <div class="text-center mt-4 pirata-font">
+        <div class="text-center mt-4 pirata-font underline decoration-lime-500">
             &copy; 2023 Joshua P. Conley. All rights reserved.
         </div>
     </footer>
