--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -50,7 +50,7 @@ import { ViewTransitions } from 'astro:transitions';
     <ViewTransitions />
 
   </head>
-  <body>
+  <body class="bg-black">
 
 
     <slot />
@@ -80,7 +80,7 @@ import { ViewTransitions } from 'astro:transitions';
 
   .hero {
     background-color: red;
-    /* Set the background to transparent */
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -95,7 +95,7 @@ import { ViewTransitions } from 'astro:transitions';
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -1; /* Place the video behind other content */
+    z-index: -1; 
   }
 
   /* Create a black opacity overlay */
@@ -111,10 +111,10 @@ import { ViewTransitions } from 'astro:transitions';
       0,
       0.5
     ); /* Adjust opacity here (0.5 = 50% opacity) */
-    z-index: 1; /* Place the overlay above the video */
+    z-index: 1;
   }
 
-  .gradient-text {
+  .text-white {
     background: linear-gradient(to right, #000000, #757575);
     -webkit-background-clip: text;
     background-clip: text;
@@ -125,22 +125,22 @@ import { ViewTransitions } from 'astro:transitions';
   .text-underline {
     text-decoration: underline;
   }
-  /* Apply Pirata One font to elements with a class of "pirata-font" */
+
   .pirata-font {
     font-family: "Pirata One", sans-serif;
-    border-right: 0.15em solid lime;  /* Blinking cursor in green */
+    border-right: 0.15em solid lime; 
   white-space: nowrap;
-  color: lime;              /* Bright green text color */
-  font-family: 'Courier New', monospace;  /* Monospace font */
+  color: lime;           
+  font-family: 'Courier New', monospace; 
   }
-  /* CSS for the video container */
+
   #background-video {
     position: fixed;
     top: 0;
     left: 0;
     min-width: 100%;
     min-height: 100%;
-    z-index: -1; /* Place it behind other content */
+    z-index: -1; 
   }
 
 </style>
