--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,70 +1,72 @@
 <section class="bg-black-500 dark:bg-black-900">
   <div class="py-8 px-4 mx-auto space-y-12 max-w-screen-xl lg:space-y-20 sm:py-16 lg:px-6 pirata-font items-center">
-    <h1 class="text-white text-6xl md:text-8xl tracking-tight font-extrabold pb-4 text-center pirata-font">Experience</h1>
-
+    <h1 class="text-secondary text-6xl md:text-8xl tracking-tight font-extrabold pb-4 text-center pirata-font">
+      <span class="text-crazy">[ </span>Experience<span class="text-crazy"> ]</span>
+  </h1>
+  
     <ol class="relative border-l border-gray-200 dark:border-gray-700 text-lg">
       <!-- Your work experience starts here -->
       <li class="mb-10 ml-4">
         <div
           class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
         </div>
-        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-white">Sep 2023 - Present</time>
-        <h3 class="text-xl md:text-2xl font-semibold text-white">Software Developer at Brem (Full-Time)</h3>
-        <p class="mb-4 text-base  md:text-xl font-normal text-white">Design, implement, and maintain software
+        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Sep 2023 - Present</time>
+        <h3 class="text-xl md:text-2xl font-semibold text-secondary">Software Developer at Brem (Full-Time)</h3>
+        <p class="mb-4 text-base  md:text-xl font-normal text-secondary">Design, implement, and maintain software
           applications utilizing Django, Laravel, PHP, SwiftUI, and more.</p>
       </li>
       <li class="mb-10 ml-4">
         <div
           class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
         </div>
-        <time class="mb-1 text-sm md:text-lg font-normal leading-none text-white">Jun 2023 - Sep 2023</time>
-        <h3 class="text-xl font-semibold md:text-2xl text-white">Programmer at Grace Health (Promoted) </h3>
-        <p class="text-base font-normal md:text-xl text-white">Worked on web development, SwiftUI, mobile
+        <time class="mb-1 text-sm md:text-lg font-normal leading-none text-secondary">Jun 2023 - Sep 2023</time>
+        <h3 class="text-xl font-semibold md:text-2xl text-secondary">Programmer at Grace Health (Promoted) </h3>
+        <p class="text-base font-normal md:text-xl text-secondary">Worked on web development, SwiftUI, mobile
           application development, API development, and more.</p>
         </li>
       <li class="mb-10 ml-4">
         <div
           class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
         </div>
-        <time class="mb-1 text-sm font-normal leading-none md:text-lg text-white">Feb 2023 - Jun 2023</time>
-        <h3 class="text-xl font-semibold text-white md:text-2xl">Programmer Analyst + Report Writer</h3>
-        <p class="text-base font-normal text-white md:text-xl">Prepared reports, interpreted data, and
+        <time class="mb-1 text-sm font-normal leading-none md:text-lg text-secondary">Feb 2023 - Jun 2023</time>
+        <h3 class="text-xl font-semibold text-secondary md:text-2xl">Programmer Analyst + Report Writer</h3>
+        <p class="text-base font-normal text-secondary md:text-xl">Prepared reports, interpreted data, and
           confirmed project requirements while utilizing various programming languages.</p>
       </li>
       <li class="mb-10 ml-4">
         <div
           class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
         </div>
-        <time class="mb-1 text-sm font-normal leading-none text-white md:text-lg">Dec 2022 - Present </time>
-        <h3 class="text-xl font-semibold text-white md:text-2xl">Cyber Incident Reporter at State of Indiana (Contract)</h3>
-        <p class="text-base font-normal text-white md:text-xl">Manages the reporting and response process for
+        <time class="mb-1 text-sm font-normal leading-none text-secondary md:text-lg">Dec 2022 - Present </time>
+        <h3 class="text-xl font-semibold text-secondary md:text-2xl">Cyber Incident Reporter at State of Indiana (Contract)</h3>
+        <p class="text-base font-normal text-secondary md:text-xl">Manages the reporting and response process for
           cyber incidents, serving as a subject matter expert on cyber incident-related matters.</p>
       </li>
       <li class="mb-10 ml-4">
         <div
           class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
         </div>
-        <time class="mb-1 text-sm font-normal leading-none text-white md:text-lg">Oct 2022 - Present</time>
-        <h3 class="text-xl font-semibold text-white md:text-2xl">Software Developer at Brem (Contract)</h3>
-        <p class="text-base font-normal text-white md:text-xl">Designed, implemented, and maintained software
+        <time class="mb-1 text-sm font-normal leading-none text-secondary md:text-lg">Oct 2022 - Present</time>
+        <h3 class="text-xl font-semibold text-secondary md:text-2xl">Software Developer at Brem (Contract)</h3>
+        <p class="text-base font-normal text-secondary md:text-xl">Designed, implemented, and maintained software
           applications while managing project timelines and resources effectively.</p>
       </li>
       <li class="mb-10 ml-4">
         <div
           class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
         </div>
-        <time class="mb-1 text-sm font-normal leading-none text-white md:text-lg">Mar 2022 - Present</time>
-        <h3 class="text-xl font-semibold text-white md:text-2xl">Engineer at United States Army Reserve</h3>
-        <p class="text-base font-normal text-white md:text-xl">Designed and planned complex construction
+        <time class="mb-1 text-sm font-normal leading-none text-secondary md:text-lg">Mar 2022 - Present</time>
+        <h3 class="text-xl font-semibold text-secondary md:text-2xl">Engineer at United States Army Reserve</h3>
+        <p class="text-base font-normal text-secondary md:text-xl">Designed and planned complex construction
           projects while adhering to strict safety protocols and guidelines.</p>
       </li>
       <li class="mb-10 ml-4">
         <div
           class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
         </div>
-        <time class="mb-1 text-sm font-normal leading-none text-white md:text-lg">Apr 2020 - Mar 2022</time>
-        <h3 class="text-xl font-semibold text-white md:text-2xl">Owner at Conley Scapes</h3>
-        <p class="text-base font-normal text-white md:text-xl">Managed comprehensive landscape design plans,
+        <time class="mb-1 text-sm font-normal leading-none text-secondary md:text-lg">Apr 2020 - Mar 2022</time>
+        <h3 class="text-xl font-semibold text-secondary md:text-2xl">Owner at Conley Scapes</h3>
+        <p class="text-base font-normal text-secondary md:text-xl">Managed comprehensive landscape design plans,
           client consultations, project proposals, and business operations. Overall 150+ jobs, managing multiple clients, and generated $150,000</p>
       </li>
       <!-- Your work experience ends here -->
