--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,17 +6,17 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-gray-600 py-4">
+    <footer class="text-secondary py-4">
         <div class="container mx-auto flex items-center justify-center">
             <!-- LinkedIn Icon -->
-            <a href="YOUR_LINKEDIN_PROFILE_URL" class="text-gray-400 hover:text-blue-500 mr-4">
+            <a href="YOUR_LINKEDIN_PROFILE_URL" class="text-secondary hover:text-blue-500 mr-4">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <!-- Add your LinkedIn icon SVG code here -->
                 </svg>
             </a>
 
             <!-- GitHub Icon -->
-            <a href="YOUR_GITHUB_PROFILE_URL" class="text-gray-400 hover:text-green-400">
+            <a href="YOUR_GITHUB_PROFILE_URL" class="text-secondary stroke-white hover:text-green-400">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <!-- Add your GitHub icon SVG code here -->
                 </svg>
@@ -24,7 +24,7 @@
         </div>
 
         <!-- Copyright Text -->
-        <div class="text-center mt-4 pirata-font underline decoration-lime-500">
+        <div class="text-center mt-4 pirata-font underline decoration-lime-600">
             &copy; 2023 Joshua P. Conley. All rights reserved.
         </div>
     </footer>
