--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -1,20 +1,22 @@
 <section class="bg-black-500 dark:bg-black-900">
   <div class="py-8 px-4 mx-auto space-y-12 max-w-screen-xl lg:space-y-20 sm:py-16 lg:px-6 pirata-font items-center">
-    <h1 class="text-white text-6xl md:text-8xl tracking-tight font-extrabold pb-4 text-center pirata-font">Education & Certifications</h1>
-
-    <ol class="relative border-l border-lime-200 text-lg">
+    <h1 class="text-secondary text-6xl md:text-8xl tracking-tight font-extrabold pb-4 text-center pirata-font">
+      <span class="text-crazy">[ </span>Education & Certifications<span class="text-crazy"> ]</span>
+  </h1>
+  
+    <ol class="relative border-l border-lime-600 text-lg">
       <!-- Your education information starts here -->
       <li class="mb-10 ml-4">
         <div
-        class="absolute w-3 h-3 bg-lime-500 border-lime-500 rounded-full mt-2 -left-1.5 ">
+        class="absolute w-3 h-3 bg-lime-600 border-lime-600 rounded-full mt-2 -left-1.5 ">
       </div>
-        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-white">Sep 2019 - Dec 2022</time>
-        <h3 class="text-xl md:text-2xl font-semibold text-white">Associate of Applied Science - AAS, Computer Science</h3>
-        <p class="mb-4 text-base md:text-xl font-normal text-white">Computer scientists design and develop the software programs that IT professionals use and maintain. Computer science emphasizes the software aspects both in theory and application rather than the physical construction of computers (hardware aspects). The computer science program includes core courses in programming, systems, algorithms, databases, web technologies, and software product development.</p>
-        <p class="mb-4 text-base md:text-xl font-normal text-white">Skills: VMware · CLI · Front-End Development · Visual Studio · Node.js · Linux · Bootstrap · Git · Java</p>
+        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Sep 2019 - Dec 2022</time>
+        <h3 class="text-xl md:text-2xl font-semibold text-secondary">Associate of Applied Science - AAS, Computer Science</h3>
+        <p class="mb-4 text-base md:text-xl font-normal text-secondary">Computer scientists design and develop the software programs that IT professionals use and maintain. Computer science emphasizes the software aspects both in theory and application rather than the physical construction of computers (hardware aspects). The computer science program includes core courses in programming, systems, algorithms, databases, web technologies, and software product development.</p>
+        <p class="mb-4 text-base md:text-xl font-normal text-secondary">Skills: VMware · CLI · Front-End Development · Visual Studio · Node.js · Linux · Bootstrap · Git · Java</p>
         <div class="mt-2">
-          <h4 class="text-base md:text-xl font-semibold text-white">Activities and Societies:</h4>
-          <p class="text-base md:text-xl font-normal text-white">Baseball | Computer Club | Student Veterans</p>
+          <h4 class="text-base md:text-xl font-semibold text-secondary">Activities and Societies:</h4>
+          <p class="text-base md:text-xl font-normal text-secondary">Baseball | Computer Club | Student Veterans</p>
         </div>
       </li>
       <!-- Your education information ends here -->
@@ -22,38 +24,38 @@
       <!-- Your certifications start here -->
       <li class="mb-10 ml-4">
         <div
-        class="absolute w-3 h-3 bg-lime-500 border-lime-500 rounded-full mt-2 -left-1.5 ">
+        class="absolute w-3 h-3 bg-lime-600 border-lime-600 rounded-full mt-2 -left-1.5 ">
       </div>
-        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-white">Issued Jan 2023</time>
-        <h3 class="text-xl md:text-2xl font-semibold text-white">Google Data Analytics Certification</h3>
-        <p class="mb-4 text-base md:text-xl font-normal text-white">Skills: Pivot Tables · Data Analytics · Tableau · Visual Studio · R (Programming Language) · Microsoft Azure · SQL · Data Analysis</p>
+        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Issued Jan 2023</time>
+        <h3 class="text-xl md:text-2xl font-semibold text-secondary">Google Data Analytics Certification</h3>
+        <p class="mb-4 text-base md:text-xl font-normal text-secondary">Skills: Pivot Tables · Data Analytics · Tableau · Visual Studio · R (Programming Language) · Microsoft Azure · SQL · Data Analysis</p>
         <div class="mt-2">
-          <h4 class="text-base md:text-xl font-semibold text-white">Credential ID:</h4>
-          <p class="text-base md:text-xl font-normal text-white">SAGAMJ6G6D2C</p>
+          <h4 class="text-base md:text-xl font-semibold text-secondary">Credential ID:</h4>
+          <p class="text-base md:text-xl font-normal text-secondary">SAGAMJ6G6D2C</p>
         </div>
       </li>
       <li class="mb-10 ml-4">
         <div
-        class="absolute w-3 h-3  rounded-full mt-2 -left-1.5 bg-lime-500 border-lime-500">
+        class="absolute w-3 h-3  rounded-full mt-2 -left-1.5 bg-lime-600 border-lime-600">
       </div>
-        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-white">Issued Jan 2023</time>
-        <h3 class="text-xl md:text-2xl font-semibold text-white">Google Finance Data Analyst Certification</h3>
+        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Issued Jan 2023</time>
+        <h3 class="text-xl md:text-2xl font-semibold text-secondary">Google Finance Data Analyst Certification</h3>
         <div class="mt-2">
-          <h4 class="text-base md:text-xl font-semibold text-white">Credential ID:</h4>
-          <p class="text-base md:text-xl font-normal text-white">AFKZP2FZ3FJG</p>
+          <h4 class="text-base md:text-xl font-semibold text-secondary">Credential ID:</h4>
+          <p class="text-base md:text-xl font-normal text-secondary">AFKZP2FZ3FJG</p>
         </div>
       </li>
       <li class="mb-10 ml-4">
         <div
-        class="absolute w-3 h-3 bg-lime-500 border-lime-500 rounded-full mt-2 -left-1.5 ">
+        class="absolute w-3 h-3 bg-lime-600 border-lime-600 rounded-full mt-2 -left-1.5 ">
       </div>
-        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-white">Issued Dec 2022</time>
-        <h3 class="text-xl md:text-2xl font-semibold text-white">Meta Front-End Development</h3>
-        <p class="mb-4 text-base md:text-xl font-normal text-white">GitHub · Linux · UI/UX · Capstone · Coding Interview · JavaScript · Version Control · HTML/CSS · React.js · Tailwind</p>
+        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Issued Dec 2022</time>
+        <h3 class="text-xl md:text-2xl font-semibold text-secondary">Meta Front-End Development</h3>
+        <p class="mb-4 text-base md:text-xl font-normal text-secondary">GitHub · Linux · UI/UX · Capstone · Coding Interview · JavaScript · Version Control · HTML/CSS · React.js · Tailwind</p>
 
         <div class="mt-2">
-          <h4 class="text-base md:text-xl font-semibold text-white">Credential ID:</h4>
-          <p class="text-base md:text-xl font-normal text-white">8ZFTATJ9FGYP</p>
+          <h4 class="text-base md:text-xl font-semibold text-secondary">Credential ID:</h4>
+          <p class="text-base md:text-xl font-normal text-secondary">8ZFTATJ9FGYP</p>
         </div>
       </li>
       <!-- Your certifications end here -->
