--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -45,12 +45,14 @@ import { ViewTransitions } from 'astro:transitions';
     <script
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<link rel="stylesheet" href="/global.css" />
     <ViewTransitions />
 
   </head>
-  <body class="bg-black">
+  <body class="bg-base">
 
 
     <slot />
@@ -114,7 +116,7 @@ import { ViewTransitions } from 'astro:transitions';
     z-index: 1;
   }
 
-  .text-white {
+  .text-secondary {
     background: linear-gradient(to right, #000000, #757575);
     -webkit-background-clip: text;
     background-clip: text;
