--- a/src/components/Typewriter.astro
+++ b/src/components/Typewriter.astro
@@ -1,7 +1,7 @@
 <!-- src/components/Typewritr.astro -->
 <div class="lds-spinner"></div>
-<div id="loadingScreen" class="fixed top-0 left-0 w-screen h-screen bg-black z-50 flex items-center justify-center ">
-  <p class="text-secondary typewriter py-6 px-4 text-center text-secondary text-[10px] md:text-2xl font-light md:text-center ">For every action, there is an equal and opposite reaction.</p>
+<div id="loadingScreen" class="fixed top-0 left-0 w-screen h-screen bg-base z-50 flex items-center justify-center ">
+  <p class="text-crazy typewriter py-6 px-4 text-center text-[10px] md:text-2xl font-light md:text-center ">For every action, there is an equal and opposite reaction.</p>
 </div>
 
 <style>
